<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_width="wrap_content"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:text="@string/please_sign_in_to_continue"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/email_address"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:autofillHints="email"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:autofillHints="password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:text="@string/login"
        android:textSize="16sp" />

</LinearLayout>

